retactor ucs-service
