# swagger/swagger.yaml
@@ -318,3 +318,20 @@ paths:
           description: "Successful data fetch of rackmount catalogs"
       x-tags:
       - tag: "default"
+  /testcallback/{no}:
+    get:
+      tags:
+      - "default"
+      description: "Returns a catalog of rackmount servers"
+      operationId: "controllers.ucs_async_controller.getTestAsync"
+      parameters:
+      - name: "no"
+        in: "path"
+        description: "USC manager host name or IP"
+        required: true
+        type: "string"
+      responses:
+        200:
+          description: "Successful data fetch of rackmount catalogs"
+      x-tags:
+      - tag: "default"
